k8s/4.BackendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-backend

spec:
  replicas: 3
  selector:
    matchLabels:    
      app: backend
  
  strategy:
   type: Recreate

  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: backend
        image: weather-backend:0.8
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: dbdata
          mountPath: /dbdata
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: db-weather
