k8s/6.FrontendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend

spec:
  replicas: 3
  selector:
    matchLabels:    
      app: frontend

  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: weather-frontend:0.6
        ports:
        - containerPort: 4000
