k8s/9.BackendDeployment copy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-backend

spec:
  replicas: 3
  selector:
    matchLabels:    
      app: backend
  
  strategy:
   type: Recreate

  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: weather-backend:0.7
        ports:
        - containerPort: 8080
