k8s/15.BalancerService.yml
apiVersion: v1
kind: Service
metadata:
  name: balancer-service
spec:
  selector:
    app: balancer
  ports:
    - name: balancer
      port: 80       # порт, по которому сервис доступен внутри кластера
      targetPort: 80 # порт внутри контейнера
  type: ClusterIP      # Доступ только внутри кластера (обычный вариант)
