k8s/6.CreateDBService.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432       # порт, по которому сервис доступен внутри кластера
      targetPort: 5432 # порт внутри контейнера
  type: ClusterIP      # Доступ только внутри кластера (обычный вариант)
