k8s/13.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: weather.io
    http:
      paths: 
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service: 
            name: backend-service
            port: 
              number: 80

      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service: 
            name: frontend-service
            port: 
              number: 80
